# CPPFinancialData

./: .gitignore  CMakeLists.txt  FinancialDataConfig.h.in  FinancialDataConfig.in  main.cpp  readme.md  run.sh
include/FinancialData/: AlphaVantage.h  FinnhubConnections.h  FinnhubSocket.h  FormatRequest.h  FundamentalData.h  Logger.h  MacroData.h  MarketPerformance.h  NewsData.h  PriceData.h  TechnicalData.h  TimeConversions.h
install/cmake/: FinancialDataConfig.cmake  FinancialDataTargets-debug.cmake  FinancialDataTargets-release.cmake  FinancialDataTargets.cmake
install/include/FinancialData/: FinancialData.h
scripts/: runtests.sh
src/: AlphaVantage.cpp  CMakeLists.txt  FinnhubConnections.cpp  FinnhubSocket.cpp  FormatRequest.cpp  FundamentalData.cpp  Logger.cpp  MacroData.cpp  MarketPerformance.cpp  NewsData.cpp  PriceData.cpp  TechnicalData.cpp  TimeConversions.cpp  TimeConversions.h
tests/: CMakeLists.txt
tests/FMP/: CMakeLists.txt  FMPTest.cpp  test-fundamental.cpp  test-macro.cpp  test-market.cpp  test-news.cpp  test-price.cpp
tests/alphavantage/: CMakeLists.txt
tests/data/: CMakeLists.txt
tests/finnhub/: CMakeLists.txt  tester.cpp
